--- a/Twitch.ipynb
+++ b/Twitch.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -28,12 +28,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "I wanted to go ahead and download the data. \n",
+    "I wanted to work through this because twitch streaming has always been something of an interest to me. \n",
+    "I then went ahead and checked the head of the data and other aspects to make sure it was solid and liable. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Names the Data set "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 235,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 307,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -74,13 +83,13 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>Channel</th>\n",
-       "      <th>Watch_time_min</th>\n",
-       "      <th>Stream_time_min</th>\n",
-       "      <th>Peak_viewers</th>\n",
-       "      <th>Average_viewers</th>\n",
+       "      <th>Watch time(Minutes)</th>\n",
+       "      <th>Stream time(minutes)</th>\n",
+       "      <th>Peak viewers</th>\n",
+       "      <th>Average viewers</th>\n",
        "      <th>Followers</th>\n",
-       "      <th>Followers_gained</th>\n",
-       "      <th>Views_gained</th>\n",
+       "      <th>Followers gained</th>\n",
+       "      <th>Views gained</th>\n",
        "      <th>Partnered</th>\n",
        "      <th>Mature</th>\n",
        "      <th>Language</th>\n",
@@ -232,32 +241,44 @@
        "</div>"
       ],
       "text/plain": [
-       "      Channel  Watch_time_min  Stream_time_min  Peak_viewers  Average_viewers  \\\n",
-       "0       xQcOW      6196161750           215250        222720            27716   \n",
-       "1    summit1g      6091677300           211845        310998            25610   \n",
-       "2      Gaules      5644590915           515280        387315            10976   \n",
-       "3    ESL_CSGO      3970318140           517740        300575             7714   \n",
-       "4        Tfue      3671000070           123660        285644            29602   \n",
-       "5   Asmongold      3668799075            82260        263720            42414   \n",
-       "6   NICKMERCS      3360675195           136275        115633            24181   \n",
-       "7  Fextralife      3301867485           147885         68795            18985   \n",
-       "8   loltyler1      2928356940           122490         89387            22381   \n",
-       "9     Anomaly      2865429915            92880        125408            12377   \n",
+       "      Channel  Watch time(Minutes)  Stream time(minutes)  Peak viewers  \\\n",
+       "0       xQcOW           6196161750                215250        222720   \n",
+       "1    summit1g           6091677300                211845        310998   \n",
+       "2      Gaules           5644590915                515280        387315   \n",
+       "3    ESL_CSGO           3970318140                517740        300575   \n",
+       "4        Tfue           3671000070                123660        285644   \n",
+       "5   Asmongold           3668799075                 82260        263720   \n",
+       "6   NICKMERCS           3360675195                136275        115633   \n",
+       "7  Fextralife           3301867485                147885         68795   \n",
+       "8   loltyler1           2928356940                122490         89387   \n",
+       "9     Anomaly           2865429915                 92880        125408   \n",
        "\n",
-       "   Followers  Followers_gained  Views_gained  Partnered  Mature    Language  \n",
-       "0    3246298           1734810      93036735       True   False     English  \n",
-       "1    5310163           1370184      89705964       True   False     English  \n",
-       "2    1767635           1023779     102611607       True    True  Portuguese  \n",
-       "3    3944850            703986     106546942       True   False     English  \n",
-       "4    8938903           2068424      78998587       True   False     English  \n",
-       "5    1563438            554201      61715781       True   False     English  \n",
-       "6    4074287           1089824      46084211       True   False     English  \n",
-       "7     508816            425468     670137548       True   False     English  \n",
-       "8    3530767            951730      51349926       True   False     English  \n",
-       "9    2607076           1532689      36350662       True   False     English  "
+       "   Average viewers  Followers  Followers gained  Views gained  Partnered  \\\n",
+       "0            27716    3246298           1734810      93036735       True   \n",
+       "1            25610    5310163           1370184      89705964       True   \n",
+       "2            10976    1767635           1023779     102611607       True   \n",
+       "3             7714    3944850            703986     106546942       True   \n",
+       "4            29602    8938903           2068424      78998587       True   \n",
+       "5            42414    1563438            554201      61715781       True   \n",
+       "6            24181    4074287           1089824      46084211       True   \n",
+       "7            18985     508816            425468     670137548       True   \n",
+       "8            22381    3530767            951730      51349926       True   \n",
+       "9            12377    2607076           1532689      36350662       True   \n",
+       "\n",
+       "   Mature    Language  \n",
+       "0   False     English  \n",
+       "1   False     English  \n",
+       "2    True  Portuguese  \n",
+       "3   False     English  \n",
+       "4   False     English  \n",
+       "5   False     English  \n",
+       "6   False     English  \n",
+       "7   False     English  \n",
+       "8   False     English  \n",
+       "9   False     English  "
       ]
      },
-     "execution_count": 307,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -275,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 325,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -299,13 +320,13 @@
        "  <thead>\n",
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
-       "      <th>Watch_time_min</th>\n",
-       "      <th>Stream_time_min</th>\n",
-       "      <th>Peak_viewers</th>\n",
-       "      <th>Average_viewers</th>\n",
+       "      <th>Watch time(Minutes)</th>\n",
+       "      <th>Stream time(minutes)</th>\n",
+       "      <th>Peak viewers</th>\n",
+       "      <th>Average viewers</th>\n",
        "      <th>Followers</th>\n",
-       "      <th>Followers_gained</th>\n",
-       "      <th>Views_gained</th>\n",
+       "      <th>Followers gained</th>\n",
+       "      <th>Views gained</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -394,28 +415,28 @@
        "</div>"
       ],
       "text/plain": [
-       "       Watch_time_min  Stream_time_min   Peak_viewers  Average_viewers  \\\n",
-       "count    1.000000e+03      1000.000000    1000.000000      1000.000000   \n",
-       "mean     4.184279e+08    120515.160000   37065.051000      4781.040000   \n",
-       "std      5.496355e+08     85376.201364   60314.307686      8453.684965   \n",
-       "min      1.221928e+08      3465.000000     496.000000       235.000000   \n",
-       "25%      1.631899e+08     73758.750000    9113.750000      1457.750000   \n",
-       "50%      2.349908e+08    108240.000000   16676.000000      2425.000000   \n",
-       "75%      4.337399e+08    141843.750000   37569.750000      4786.250000   \n",
-       "max      6.196162e+09    521445.000000  639375.000000    147643.000000   \n",
+       "       Watch time(Minutes)  Stream time(minutes)   Peak viewers  \\\n",
+       "count         1.000000e+03           1000.000000    1000.000000   \n",
+       "mean          4.184279e+08         120515.160000   37065.051000   \n",
+       "std           5.496355e+08          85376.201364   60314.307686   \n",
+       "min           1.221928e+08           3465.000000     496.000000   \n",
+       "25%           1.631899e+08          73758.750000    9113.750000   \n",
+       "50%           2.349908e+08         108240.000000   16676.000000   \n",
+       "75%           4.337399e+08         141843.750000   37569.750000   \n",
+       "max           6.196162e+09         521445.000000  639375.000000   \n",
        "\n",
-       "          Followers  Followers_gained  Views_gained  \n",
-       "count  1.000000e+03      1.000000e+03  1.000000e+03  \n",
-       "mean   5.700541e+05      2.055185e+05  1.166817e+07  \n",
-       "std    8.044134e+05      3.399137e+05  2.490572e+07  \n",
-       "min    3.660000e+03     -1.577200e+04  1.757880e+05  \n",
-       "25%    1.705462e+05      4.375825e+04  3.880602e+06  \n",
-       "50%    3.180630e+05      9.835200e+04  6.456324e+06  \n",
-       "75%    6.243322e+05      2.361308e+05  1.219676e+07  \n",
-       "max    8.938903e+06      3.966525e+06  6.701375e+08  "
+       "       Average viewers     Followers  Followers gained  Views gained  \n",
+       "count      1000.000000  1.000000e+03      1.000000e+03  1.000000e+03  \n",
+       "mean       4781.040000  5.700541e+05      2.055185e+05  1.166817e+07  \n",
+       "std        8453.684965  8.044134e+05      3.399137e+05  2.490572e+07  \n",
+       "min         235.000000  3.660000e+03     -1.577200e+04  1.757880e+05  \n",
+       "25%        1457.750000  1.705462e+05      4.375825e+04  3.880602e+06  \n",
+       "50%        2425.000000  3.180630e+05      9.835200e+04  6.456324e+06  \n",
+       "75%        4786.250000  6.243322e+05      2.361308e+05  1.219676e+07  \n",
+       "max      147643.000000  8.938903e+06      3.966525e+06  6.701375e+08  "
       ]
      },
-     "execution_count": 325,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -433,7 +454,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 343,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -443,19 +464,19 @@
       "<class 'pandas.core.frame.DataFrame'>\n",
       "RangeIndex: 1000 entries, 0 to 999\n",
       "Data columns (total 11 columns):\n",
-      " #   Column            Non-Null Count  Dtype \n",
-      "---  ------            --------------  ----- \n",
-      " 0   Channel           1000 non-null   object\n",
-      " 1   Watch_time_min    1000 non-null   int64 \n",
-      " 2   Stream_time_min   1000 non-null   int64 \n",
-      " 3   Peak_viewers      1000 non-null   int64 \n",
-      " 4   Average_viewers   1000 non-null   int64 \n",
-      " 5   Followers         1000 non-null   int64 \n",
-      " 6   Followers_gained  1000 non-null   int64 \n",
-      " 7   Views_gained      1000 non-null   int64 \n",
-      " 8   Partnered         1000 non-null   bool  \n",
-      " 9   Mature            1000 non-null   bool  \n",
-      " 10  Language          1000 non-null   object\n",
+      " #   Column                Non-Null Count  Dtype \n",
+      "---  ------                --------------  ----- \n",
+      " 0   Channel               1000 non-null   object\n",
+      " 1   Watch time(Minutes)   1000 non-null   int64 \n",
+      " 2   Stream time(minutes)  1000 non-null   int64 \n",
+      " 3   Peak viewers          1000 non-null   int64 \n",
+      " 4   Average viewers       1000 non-null   int64 \n",
+      " 5   Followers             1000 non-null   int64 \n",
+      " 6   Followers gained      1000 non-null   int64 \n",
+      " 7   Views gained          1000 non-null   int64 \n",
+      " 8   Partnered             1000 non-null   bool  \n",
+      " 9   Mature                1000 non-null   bool  \n",
+      " 10  Language              1000 non-null   object\n",
       "dtypes: bool(2), int64(7), object(2)\n",
       "memory usage: 72.4+ KB\n"
      ]
@@ -469,24 +490,32 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After I looked at the basics of the data I wanted to rename the columns to be more readable as well as formatable for later. \n",
+    "I checked for nulls and other values to make sure it wasn't missing data. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Show Columns that I may need to Rename"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 345,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Index(['Channel', 'Watch_time_min', 'Stream_time_min', 'Peak_viewers',\n",
-       "       'Average_viewers', 'Followers', 'Followers_gained', 'Views_gained',\n",
-       "       'Partnered', 'Mature', 'Language'],\n",
+       "Index(['Channel', 'Watch time(Minutes)', 'Stream time(minutes)',\n",
+       "       'Peak viewers', 'Average viewers', 'Followers', 'Followers gained',\n",
+       "       'Views gained', 'Partnered', 'Mature', 'Language'],\n",
        "      dtype='object')"
       ]
      },
-     "execution_count": 345,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -504,11 +533,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 346,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
     "df.rename(columns = {'Watch time(Minutes)':'Watch_time_min', 'Stream time(minutes)':'Stream_time_min', 'Peak viewers':'Peak_viewers', 'Average viewers':'Average_viewers', 'Followers gained':'Followers_gained', 'Views gained':'Views_gained'}, inplace = True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "I asked myself what would I like to know? \n",
+    "I determined personally I wanted to know what the top streamers information was. \n",
+    "Knowing the top streamers as well as the follower gain and/or loss of streamers would lead me to some new and quality content. "
    ]
   },
   {
@@ -520,7 +558,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 347,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -606,7 +644,7 @@
        "51         Bugha"
       ]
      },
-     "execution_count": 347,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -619,12 +657,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Here you can see the top follower counts per channel in the top 10 streamers."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Information about top 10 streamers and what makes them the top - Visual 1"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 348,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -661,7 +706,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 349,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -696,7 +741,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 350,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -727,12 +772,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After looking through the top streamers information, I asked abou the lowest streamers. \n",
+    "I wanted to know this because the data will show the statistics of the channels that could steer me away from bad content. \n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "What is Considered the bottom of the list based on Stream Time, average views, and followers? - Question 2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 351,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -952,7 +1005,7 @@
        "932   False   English  "
       ]
      },
-     "execution_count": 351,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -965,12 +1018,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Information about top 10 streamers and what makes them the top - Visual 4"
+    "Information about bottom 10 streamers and what makes them the least watched - Visual 4"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 352,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -1007,7 +1060,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 353,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1095,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 354,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -1072,12 +1125,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "After looking through the facorites and least watched channels I then thought about whether the channels that were the best to watch were mainly english or other languages. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "How many streamers are there for each language from this dataset? - Question 3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 355,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1218,7 +1278,7 @@
        "Swedish            1"
       ]
      },
-     "execution_count": 355,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1236,7 +1296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 356,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1272,7 +1332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1297,7 +1357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1476,7 +1536,7 @@
        "Turkish       259308.227273  1.086601e+07"
       ]
      },
-     "execution_count": 358,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1494,7 +1554,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1517,12 +1577,19 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Lastly out of curiosity I wanted to know who had the most viewers in one sitting. While this may not provide input on the most followed or like, it allowed me to compare information to where the riot games stream ranked. It also showed that while some channels may have the most followers, it doesm't mean they are the most watched or enjoyed. "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Which Streamer had the highest number of Peak Viewers in 1 Stream? - Question 7"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
